Increase memory allotment for petal tests